--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,50 +1,53 @@
-name: .NET
+name: CI
 
 on:
+  create:
+    branches: 
+      - release/**
   push:
-    branches: [ main ]
+    branches:
+    - main
   pull_request:
-    branches: [ main ]
-
+    branches:
+    - main
+    
 jobs:
   build:
+
+    env:
+      BUILD_CONFIG: 'Release'
+      SOLUTION: 'MagicalTimeFormat.sln'
 
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
+    
+    - name: Get Build Version
+      run: |
+        Import-Module .\build\GetBuildVersion.psm1
+        Write-Host $Env:GITHUB_REF
+        $version = GetBuildVersion -VersionString $Env:GITHUB_REF
+        echo "BUILD_VERSION=$version" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf-8 -Append
+      shell: pwsh
+
+    - name: Setup NuGet
+      uses: NuGet/setup-nuget@v1.0.5
+
+    - name: Restore dependencies
+      run: nuget restore $SOLUTION
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 5.0.x
-    - name: Restore dependencies
-      run: dotnet restore
+        dotnet-version: 3.1.x
+
     - name: Build
-      run: dotnet build --no-restore
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
-    - name: Publish NuGet
-      # You may pin to the exact commit or the version.
-      # uses: brandedoutcast/publish-nuget@c12b8546b67672ee38ac87bea491ac94a587f7cc
-      uses: brandedoutcast/publish-nuget@v2.5.5
-      with:
-        # Filepath of the project to be packaged, relative to root of repository
-        PROJECT_FILE_PATH: MagicalTimeFormat/MagicalTimeFormat.csproj
-        # NuGet package id, used for version detection & defaults to project name
-        #PACKAGE_NAME: # optional
-        # Filepath with version info, relative to root of repository & defaults to PROJECT_FILE_PATH
-        #VERSION_FILE_PATH: # optional
-        # Regex pattern to extract version info in a capturing group
-        #VERSION_REGEX: # optional, default is ^\s*<Version>(.*)<\/Version>\s*$
-        # Useful with external providers like Nerdbank.GitVersioning, ignores VERSION_FILE_PATH & VERSION_REGEX
-        #VERSION_STATIC: # optional
-        # Flag to toggle git tagging, enabled by default
-        #TAG_COMMIT: # optional, default is true
-        # Format of the git tag, [*] gets replaced with actual version
-        #TAG_FORMAT: # optional, default is v*
-        # API key to authenticate with NuGet server
-        #NUGET_KEY: # optional
-        # NuGet server uri hosting the packages, defaults to https://api.nuget.org
-        #NUGET_SOURCE: # optional, default is https://api.nuget.org
-        # Flag to toggle pushing symbols along with nuget package to the server, disabled by default
-        #INCLUDE_SYMBOLS: # optional
+      run: dotnet build $SOLUTION --configuration $BUILD_CONFIG -p:Version=$BUILD_VERSION --no-restore
+
+    - name: Run tests
+      run: dotnet test /p:Configuration=$env:BUILD_CONFIG --no-restore --no-build --verbosity normal
+      
+    - name: Publish
+      if: startsWith(github.ref, 'refs/heads/release')
+      run: nuget push **\*.nupkg -Source 'https://api.nuget.org/v3/index.json' -ApiKey ${{secrets.NUGET_API_KEY}}
